--- a/css/style.css
+++ b/css/style.css
@@ -34,13 +34,20 @@ h1, h2, .nav {
     background-attachment: fixed;
 }
 
-.enter-page {
+.page-bg {
     background-image: url('../images/white-crumpled-paper-texture-bg.jpg');
     min-height: 100vh;
+}
+
+.page-content {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    color: white;
+}
+
+.enter-page {
     padding-top: 0;
 }
 
@@ -101,25 +108,16 @@ h1, h2, .nav {
 
 .blog-page {
     padding: 2rem;
-    background-image: url('../images/white-crumpled-paper-texture-bg.jpg');
     min-height: calc(100vh - 60px);
-    color: white;
 }
 
 .portfolio-page {
     padding: 2rem;
-    background-image: url('../images/white-crumpled-paper-texture-bg.jpg');
-    color: white;
     min-height: calc(100vh - 60px);
 }
 
 .contact-page {
     padding: 1rem;
-    background-image: url('../images/white-crumpled-paper-texture-bg.jpg');
-    color: white;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     min-height: calc(100vh - 60px);
     box-sizing: border-box;
 }
@@ -181,7 +179,7 @@ h1, h2, .nav {
     cursor: pointer;
 }
 
-#youtube-feed-container {
+.youtube-feed-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
